[package]
name = "modalcell"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["cell", "borrowing"]
categories = ["memory-management", "no-std"]
readme = "./README.md"
description = "A cell library that decouples data from read-only and exclusive permissions to access the data."
repository = "https://github.com/khonsulabs/modalcell"
rust-version = "1.65.0"

[[example]]
name = "threadsafe"
required-features = ["std"]

[features]
default = ["std"]
std = []
